--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -6,3 +6,10 @@ body {
 a {
   color: #00B7FF;
 }
+
+.card {
+  width: 300px;
+  padding: 20px;
+  margin: 0 auto;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
